basic posts added

--- a/_posts/2021-02-28-post2.md
+++ b/_posts/2021-02-28-post2.md
@@ -1,11 +1,11 @@
 ---
-title:  "깃헙 파일 업로드 방법 정리"
+title:  "깃헙 파일 업로드"
 search: false
 categories: 
   - Jekyll
 last_modified_at: 2021-02-28T08:05:34-05:00
 ---
-깃헙 기본 명령어
+basic git commmand
 ==============================
 
 깃헙 업로드를 위한 간단한 명령어 정리
