--- a/_posts/2021-02-28-post1.md
+++ b/_posts/2021-02-28-post1.md
@@ -1,11 +1,11 @@
 ---
-title:  "테스트 포스팅 1"
+title:  "테스트 포스팅"
 search: false
 categories: 
   - Jekyll
 last_modified_at: 2021-02-28T08:05:34-05:00
 ---
-테스트 포스팅
+첫 포스팅
 ==============================
 1. 시작
 -------
