modified some contents

--- a/_posts/2021-08-22-post5.md
+++ b/_posts/2021-08-22-post5.md
@@ -1,1 +1,23 @@
-temp file 5
+---
+title:  "5.테스트 독서록"
+search: false
+categories: 
+  - Jekyll
+last_modified_at: 2021-08-22
+---
+
+test book review 1
+===
+
+1.chap1
+
+```
+cd C:\Users\okht1\simple4logic.github.io
+```
+
+
+2. chap2
+
+```
+bundle exec jekyll serve
+```
