--- a/_posts/2021-08-22-post5.md
+++ b/_posts/2021-08-22-post5.md
@@ -1,12 +1,16 @@
 ---
-title:  "5.테스트 독서록"
+title:  "테스트 독서록"
 search: false
 categories: 
-  - Jekyll
-last_modified_at: 2021-08-22
+  - book_review
+tags:
+  - book
+  - review
+
+excerpt: "열두 발자국 "
 ---
 
-test book review 1
+열두발자국 - 정재승
 ===
 
 1.chap1
