개발일지 1 작성

--- a/_posts/blog/2021-09-05-1.md
+++ b/_posts/blog/2021-09-05-1.md
@@ -1,1 +1,26 @@
+---
+title:  "블로그 개발 일지 1"
+search: false
+excerpt: "기초 공사!"
+categories: 
+  - github
+tags:
+  - blog
+--- 
+<!-- basic info -->
 
+## 1. favicon 추가
+
+웹브라우저 탭 창에 뜨는 자그만한 이모티콘을 추가했다.  
+  
+![favicon](https://user-images.githubusercontent.com/68508521/132111096-6ec9b26d-7e51-42c0-aa09-40a53cf7b270.png)  
+
+
+## 2. page_to_top 버튼 추가
+
+page to top 버튼 ![image](https://user-images.githubusercontent.com/68508521/132111181-c53e3e43-0a35-4c56-89d3-3c00e715687f.png)을 추가했다.  
+
+
+## 3. categories 추가
+
+카테고리를 추가했다.
