개발일지 1 수정

--- a/_posts/blog/2021-09-05-1.md
+++ b/_posts/blog/2021-09-05-1.md
@@ -21,6 +21,37 @@ tags:
 page to top 버튼 ![image](https://user-images.githubusercontent.com/68508521/132111181-c53e3e43-0a35-4c56-89d3-3c00e715687f.png)을 추가했다.  
 
 
-## 3. categories 추가
+## 3. 포스팅 월별 분류
 
-카테고리를 추가했다.
+포스팅을 월별로 분류할 수 있도록 했다.  
+1. 레이아웃 추가 : layouts 폴더에서 monthly.html 파일 생성
+2. 주소 연동 : pages 폴더에서 month-archive.md 파일 생성
+```
+---
+title: "Posts by Month"
+permalink: /month-archive/
+layout: monthly
+author_profile: true
+---
+```   
+이런 식으로 주소를 연동시킨다. 
+
+## 4. 네비게이션 바 수정
+
+네비게이션 바를 손봐서 우측 상단의 
+1. posts를 누르면 월별로 분류된 posts를 볼 수 있게 했다 (위의 month-archive.md 와 연동)
+
+```
+- title: "Monthly"
+url: /month-archive/
+```
+  
+2. categories를 누르면 카테고리별로 분류된 posts를 볼 수 있게 했다. 
+
+```
+- title: "Categories"
+url: /month-archive/
+```
+
+
+
