--- a/_posts/blog/2021-09-05-1.md
+++ b/_posts/blog/2021-09-05-1.md
@@ -10,19 +10,21 @@ tags:
 <!-- basic info -->
 
 ## 1. favicon 추가
-
+<br/>
 웹브라우저 탭 창에 뜨는 자그만한 이모티콘을 추가했다.  
   
-![favicon](https://user-images.githubusercontent.com/68508521/132111096-6ec9b26d-7e51-42c0-aa09-40a53cf7b270.png)  
+![favicon](https://user-images.githubusercontent.com/68508521/132111096-6ec9b26d-7e51-42c0-aa09-40a53cf7b270.png)
 
-
+<br/>
+   
 ## 2. page_to_top 버튼 추가
+<br/>
+page to top 버튼 ![image](https://user-images.githubusercontent.com/68508521/132111181-c53e3e43-0a35-4c56-89d3-3c00e715687f.png) 을 추가했다.  
 
-page to top 버튼 ![image](https://user-images.githubusercontent.com/68508521/132111181-c53e3e43-0a35-4c56-89d3-3c00e715687f.png)을 추가했다.  
-
-
+<br/>
+      
 ## 3. 포스팅 월별 분류
-
+<br/>
 포스팅을 월별로 분류할 수 있도록 했다.  
 1. 레이아웃 추가 : layouts 폴더에서 monthly.html 파일 생성
 2. 주소 연동 : pages 폴더에서 month-archive.md 파일 생성
@@ -36,7 +38,14 @@ author_profile: true
 ```   
 이런 식으로 주소를 연동시킨다. 
 
+<br/>
+
 ## 4. 네비게이션 바 수정
+<br/>
+경로는 다음과 같다.
+```
+_data/navagation.yml
+```
 
 네비게이션 바를 손봐서 우측 상단의 
 1. posts를 누르면 월별로 분류된 posts를 볼 수 있게 했다 (위의 month-archive.md 와 연동)
@@ -50,7 +59,7 @@ url: /month-archive/
 
 ```
 - title: "Categories"
-url: /month-archive/
+url: /categories/
 ```
 
 
