열두발자국 독후감 완성

--- a/_posts/book_review/2021-09-05-1.md
+++ b/_posts/book_review/2021-09-05-1.md
@@ -1,1 +1,227 @@
+---
+title:  "열두 발자국 - 정재승"
+search: false
+categories: 
+  - book_review
+tags:
+  - book
+  - review
 
+excerpt: "정재승다운 가벼운 접근"
+\\<!--그 책의 한줄평-->
+---
+
+# 열두 발자국 - 정재승
+
+## chap1 - 인간에게 선택이란
+
+
+70%의 확신만 들어도 실행에 옮겨라.          
+하고싶은게 있다면 변화를(기존의 것을 배제) 해도 좋지만            
+지금 이게 싫어서 변화를 바라는 것은 좋지 않다.         
+<br/>
+‘리더’들은 결정을 당연히 번복해도 된다.        
+단 커뮤니케이션이 보장된 상태여야 한다.        
+한 결정을 우직하게 밀고간다는 것은 의외로 어리석은 행위이다.          
+
+
+> “적절한 시기에 적절한 의사결정을 내려 빠르게 실행하지만, 잘못됐다 판단되면 계속 번복하며 조정하라”
+<br/>
+과감하게 실행에 옮기되, hubris(지나친 자기과신)는 금물.<br/>
+방황의 시간은 필요하다. 따라서 방황하며 자신만의 지도를 그려볼 것.         
+<br/>
+<br/>
+99%의 성공과 1% 실패 일지라도 나는 1%의 실패를 두려워한다. 세상에 100%는 그 어디에도 없는데 말이다. 겁쟁이인 내게 의사결정에 있어 좀더 담대해져야겠다는 생각이 들게 했다, 그렇지 않으면 영원한 fast follwer에 불과한 삶을 살게 될 것 같다. 여담이지만 내 MBTI가 신중한 ‘조력가’로 나왔다. 그러려니 했지만 의외로 마음 한 구석에는 ‘내가 조력가에 불과한건가, 리더로서는 자질이 부족한건가’ 하는 생각이 들었던 것 같다.
+<br/>
+<br/>
+막연히 실패하는 것을 매우 두려워하게 되었던 것은 아마 고등학교 때의 기억이 진하게 남아있기 때문인 것 같다. 그래서 의사결정에 어떻게든 확신을 갖고자 신중함을 기하고 그 사이에 타이밍을 놓쳐버린다. 일단 ‘그 상황에서’ ‘당장’ 판단을 내리고, 조금씩 오차를 수정해나가는 것이 올바른 것 같다. 당연하게도, 미래가 공개되면 공개될수록 더 나은 선택을 내릴 수 있다는 것이 자명하기 때문이다.
+
+
+
+## chap2 - 결정장애
+
+
+신중함은 환상이다. 대체 어디까지 신중해야 하는가?  
+신중함에 붙잡혀 결단내려야 할 순간을 잃는다면 그건 그냥 어리석은 것이다.  
+
+
+‘memento mori’, 죽음을 기억하라.  
+내게 삶이 딱 1년 밖에 남지 않았다면? 아마 그 누구보다 치열하게, 과감하게 해낼 것이다. 결심에 무뎌지는 순간에는 죽음을 기억하라.  
+
+
+## chap3 - 결핍의 필요
+
+
+우리는 결핍없는 세상에 살아가고 있다(정말로 공감되는 말이다).  
+유년기를 돌이켜봐도 뭐가 부족하거나 아쉬웠던 기억이 크게 떠오르지 않는다. 배부르고 놀 것도 많고 그래서인지 무언가를 쟁취하기 위해 아등바등 해본 것은 공부밖에 없었던 것 같다. 지금 20대에 내게 결핍된 것은 무엇일까?  
+군대에 있는 지금으로서는 공부할 수 있는 인프라 같다. 컴퓨터도 마음대로 못 쓰고, 폰도 잘 못보는. 이런 결핍 때문일까? 지금 노트에 펜으로 한줄 한줄 책에 대한 감상평을 적어나가는게 참 즐겁다. 책에서 얻은 교훈들을 반추하듯 다시 음미하는 느낌이 좋다.  
+
+
+-무료한 시간을 허락하기  
+학창시절에 무료한 시간은 적어도 내가 알기론 ‘죄’였다. 스스로도 그렇게 생각했다. 공부로 지식을 늘리거나 게임·음악으로 스트레스를 풀거나, 친구를 만나서 리프레시를 하거나. 모든 행동에는 시간을 투자한 만큼의 확실한 리턴이 돌아와야 한다고 맹신하며, 실제로도 그렇게 살아왔다. 그래서인지 이 버릇이 대학교때까지 넘어와서 하던 것만, return이 어느정도 보장된(주로 즐거움) 활동만을 했던 것 같다. 무료한 시간을 게임이든, 과제(공부)든 뭐든간에 일단 채워넣었다. 무료함에 죄악을 느껴서였다...  
+사회에 나가면 어떨지 모르겠다. 책에서는 무료함을 누리다보면 뭐든 만들어서 논다던데.. 나도 할가말까 깔짝거리기만 했던 Ti사의 보드? 갖고 프로젝트나 해볼까 싶다.  
+
+
+## chap5 - 새로고침, 변화는 왜 힘든가?
+
+
+뇌의 영역은 크게 두 가지로 나뉜다.  
+목표지향 영역(goal-directed system) : 결과값(목표)을 최대화하려 함  
+습관뇌 영역(habit system) : 투입값(인지적 에너지)을 최소화하려 함  
+
+
+반복적인 선택인 경우 결과값이 어느정도 constant하기 때문에 이때는 에너지 투입을 최소화해서 이득을 얻는다.
+
+
+처음하거나, 중요하다고 생각할수록 묙표지향 영역이 활성화된다.
+
+> Profit = output / input 이기 때문에 분모는 less better, 분자는 more better이다.
+
+
+나이를 먹을 수록 습관뇌를 더 많이 쓰게되어 삶의 진폭과 나이는 반비례한다.
+
+습관뇌를 사람을 무기력하게 하는 것 같다. 수렵시대의 뇌를 여전히 가진 인류에게는 최적의 진화였겠지만, 시대는 너무 변했다. 에너지를 굳이 아낄 필요성이 없다, 새로운 도전을 하려면 익숙함과 편함에서 탈피해야만 하지 않겠는가? 생각이 귀찮아진 순간, 즉 매 순간마다 ‘늘 하던대로 하지 뭐...’와 같은 마음가짐은 더 이상의 진척이 없을 것 같다. 목표지향 영역 뇌를 자주 활성화한다면, 즉 귀찮음에 잡아먹히지 않고 어떻게든 의도한 바(목적)의 기댓값을 최대화하려고 계속 탐색하고 재고한다면 이는 필히 실행될 것이다. 익숙함에서의 탈피, 여기서부터가 목표실현의 첫걸음인 것 같다.  
+
+
+
+실망과 후회. 실망은 대부분의 동물들이 할 수 있지만 후회는 영장류만의 특권이다.
+가지 않은 길을 시뮬레이션 할 수 있기에 후회가 가능하다. 그렇기에 나중에 더 나은 선택이 가능한 것.  
+
+
+철저하게 낯선 환경에 놓이게 된다면, 새로고침이 알아서 이루어진다. 따라서 ‘혼란을 즐겨’라. 군대처럼 극단적인 새로고침이 있을까? 와서 보니 사회에서의 무언가가 소중했던 것인지 알 것 같다. 소소한 행복들- 친구들과 만나 이야기하고, 아무도 간섭하지 않는 나만의 장소가 있고, 원할 때 떠날(여행 같은 것들) 수 있고. 이런 것들이 참 감사한 일이었다.  
+> 후회를 수용하되, 10%~20%정도는 탐색을 위해 열어두자. 혹시모를 수확이 분명 있을 것이다.  
+
+
+## chap6 - 왜 우리는 미신에 빠지는가?
+
+
+미래에 대한 통제권을 얻는다는 환상에 빠지기 때문이다.  
+조금이라도 불확실한 미래를 통제하고 싶기 때문이다.  
+
+
+통계의 오류에는 다음과 같은 두가지 오류가 있다.  
+제1종 오류 : 실제는 아닌데 판단은 맞다고 내림. 거짓 양성(false positive), 오류  
+제2종 오류 : 실제는 맞는데 판단은 아니라고 내림. 거짓 음성(false negative), 오류  
+
+
+우리 삶에서는 제2종 오류가 치명적이다. 제1종 오류처럼 대비했는데 아니었으면 에이 아니었네 정도로 끝난다. (여담이지만 법학에서는 제1종 오류가 치명적이다. 무죄인 사람을 유죄라고 판단내리는 경우가 있기 때문이다)  
+
+
+실제로는 미래를 알 때, 즉 예측된 상화일 때 기쁨이 덜하다. 예측하지 못한 보상일 때야말로 가장 기쁜 것이다.  
+>의심하되, 깔보지 마라. = 비판하되, 터무니없다고 확단하지 마라.  
+
+
+## chap7 - 창의적인 이들의 뇌
+
+
+창의성과 지능 사이에는 유의미한 상관관계가 없다. 일정 아이큐만 넘으면 그 이후부터는 천재는 일반인이든 마찬가지.  
+
+
+은유(metaphor), 전혀 연관 없는 것들에 연관성을 부여하는 행위(중학교 때 어쩌다가 보게 된 상산고 면접문제가 떠오른다. ‘핸드폰과 고래의 공통점을 10가지 이상 찾으시오’)  
+
+
+아예 다른 관점에서 접근하는, 관계없는 두 분야를 연결시킬 때야말로 창의성의 시발점이다.  
+
+
+창의적인 수를 떠올리는 ‘아하-모멘트’는 뇌의 서로 다른 영역이 서로 신호를 주고받을 때 일어난다.  
+
+
+>창의성에는 방법이 없다. 방법이 있다면 이미 창의성의 정의에 위배된다. 흉내내고 모방하되 꾸준히 변형하라.  
+
+
+## chap8 - 인공지능 시대
+
+
+디지털 치매? 현 시대에 우리는 뇌를 ‘덜’ 사용하는가? 아니다! 우리는 다른 방식으로 뇌를 쓰고 있는 것뿐이다. 뇌를 스는 방식이 바귀면서 뇌의 구조가 달라진다. 이게 바로 뇌의 기소성(neural plasticity)이다. 現 시대에서는 정보를 빠르게 스캐닝하고, 검색, 편집이 단순히 외우는 것보다 훨씬 중요하기 때문이다.  
+
+
+## chap9 - 산업혁명 시대
+
+
+스마트기기 : just-a-moment devices(일상단절기기), 즉 현실을 잠깐 멈추고 비트 세계에 들어갔다 나오는 것.  
+이와 대비되는 개념은 seamless-tech(일상몰입기술), 이는 현실과 단절되지 않는다.  
+
+
+모든 atom의 bitization은 아톰과 비트의 일치를 의미하며 현실세계와 가상세계의 일치를 뜻한다. 이는 4차 산업혁명이 추구하는 바이기도 하다.  
+> bit (virtual world) ↔ atom (real world)  
+
+
+정재승 교수가 생각한은 가장 먼저 사라질 직업은 빅데이터 전문가라고 한다. 왜냐하면 누구나 쓸 수 있도록 빅데이터 가공 툴이 API처럼 나올 것이기 때문.  
+
+
+__행복은 경험(상태)이 아니라 기억이다. 보통 행복한 순간들을 과거에서 찾으며, 그 당시에는 행복하다고 느끼지 못하는 경우가 잦다.__  
+
+
+아날로그의 반격, 왜? : 디지털은 오직 뇌만 자극한다. 몸도 자극을 원하는데, 그렇기에 아날로그를 추구하는 것이다. 아날로그는 몸과 마음 둘 다 자극해준다.  
+
+
+## chap10 혁명은 어떻게 시작되나
+
+
+정보의 신뢰가 권위에서 다수가 만들어낸 집단지성으로 옮겨진다. wikipedia의 등장.  
+
+
+technology는 어떻게 진화할지 아무도 모른다, 그 당시 컴퓨터는 Desk위에(desktop의 발명) 놓도록 하면 뭐가 달라지는지 어떻게 예상했겠는가. ‘잘 모르겠지만 일단 해보면 뭔가 생길 것 같아’라는 생각에서 시작된 혁명인 것이다!  
++패러데이가 전기를 발명했을 때 엘리자베스 여왕이 그래서 이걸로 무얼 할 수 있는지 물었던 맥락과 비슷하다. 그 당시에는 ‘그래서 이게 뭐 어쩔건데?’ 였겠지만 현대에서는 전기 없는 우리의 모습을 상상조차 할 수 없다.  
+
+
+오프라인(atom) -> 고전주의 경제학  
+온라인(bit)-> 롱테일 경제학(지식 카테고리 포스팅 참고)  
+
+
+> 돈키호테, '현실은 진실의 적이다. 누가 미친거죠? 장차 이룩할 수 있는 세상을 상상하는 내가 미친건가요, 아니면 있는 그대로만 세상을 바라보는 사람이 미친건가요'  
+
+
+상상을 현실로 만들려는(crazy한 아이디어처럼 보여도) 노력들이 곧 혁명을 이루어낸다.
+> '사과는 그냥 덜어지는게 아니라 누군가 사과나무를 흔들어서 떨어진다' by 체 게바라  
+
+
+## chap11 순응하지 않는 사람들은 어덯게 세상에 도전하는가?
+
+
+1. 창업에 성공한 이들은 기꺼이 위험을 감수했는가? 대답은 __'그렇지 않다.'__  
+오히려 위험을 잘 관리하는게 훨씬 중요하다.  
+
+
+2. 천재들은 일찍이 성취를 이루는가? 대답은 __'그렇지 않다.'__  
+일반적으로 20-30대에 성취는 잘 이루어지지 않는다. 그 이후에, 즉 40대 이후에 성취가 무려 60%나 된다.  
+
+
+사람들은 크게  
+시스템을 바꾸려는 노력을 하지 않고 합리화하려는 순응자(안일함)와,  
+시스템과의 불화, '이건 아니야'라고 저항하는 이들(오리지널스)로 나뉜다.  
+
+
+__실패를 시도__ 할 준비가 되어있는 이들이 바로 오리지널스이다.  
+성취가 높은 사람일수록 뇌에서의 mode-shifting이 빠르고 원활하게 일어난다. 여러가지 과제를 번갈아가며 처리해도 아무런 문제가 없다.  
+
+
+fMRI를 통해 후두엽의 시각피질 활동만 측정해도 무얼 보고있는지 얼추 재현이 가능하다. 단어같은 것들도 뇌의 어느영역에 저장되어 있는지 알 수 있다.  
+
+
+퍼스트 펭귄이 되되, 성급하지 않게 뛰어내려라.  
+창의적인 이들은 일을 많이 미룬다. 왜? 한번 더 생각해보기 때문이다. 이런저런 상황을 모두 생각한다.  
+
+>위험을 감수하되, 위험을 잘 관리해라. 실행력은 중요하나, 섣부른 시도는 자제해라.  
+
+
+## chap 12 - 과학하기 힘든 인간
+
+
+누구나 다 과학을 잘하기는 힘들다. 실제로 어렵다. 이걸 인정받아야 한다.  
+
+
+인간의 뇌는 자신의 구조를 바꾸어가며 기능이 더해지는 구조이다. 인간이 하는 원샷러닝(직관)을 컴퓨터가 해내기 시작하는데, 사실 인간의 직관도 어쩌면 계산의 산물이 아니었을까?  
+뇌피셜?을 언급해보자면 stochastic gradient descent가 랜덤으로 일부 데이터만 골라서 gradient descent를 진행하는 것처럼, 인간의 직관도 순간적으로 모든 감각기관이 얻은 데이터를 종합해서 그중에 랜덤으로 몇가지 정보만 선택해서 빠르게 판단을 내리는 것 같다. 모든 데이터를 고려해서 판단을 내리는 것은 실제 machine-learning에서 gradient descent가 갖는 문제점처럼 너무 오래 걸리기 때문에 인간이 생존에 유리해지기 위해서 stochastic과 같은 수단을 택하게 되지 않았을까? 
+
+
+## Overall Review
+
+
+1. 정재승 박사 특유의 부드러운 전개와 거부감 없는 도입이 참 책장을 편히 넘기게 해준 것 같다. 강연한 내용을 가져다가 풀어서 이야기 한 점이 이 책의 큰 매력 포인트같다.  
+
+
+2. 기존의 고정관념들, '사회적 성취를 이룬 이들은 risk-taker들이다, 기꺼이 위험을 감수한다' 등이 거짓이었음이 정말 충격적이었다. 그리고서 얻은 결론이 퍼스트 펭귄이 되야하나 신중해야 하며, 실행력을 겸비하되 섣불러서는 안된다... 등 뭔가 극단에 치우친 것이 아니라 오히려 상반된 덕목을 모두 갖추어야 한다는 점에서 딱 중간을 유지하는게 무엇보다 힘들구나 라고 생각했다.  
+
+
+3. 정재승교수의 여러 책들을 읽으며 과학의 대중화에 무엇보다 발벗고 나서는 모습이 참 존경스럽게만 보였는데, 정작 당사자는 과학의 대중화로 인해 과학이 쉬워보일까봐, 과학자들의 업적이 과소평가될까봐 대중화에 회의적이라는 말이 참 의미심장하게 다가왔다. 칼 세이건 이펙트라고 했던가. 나도 천재 과학자의 모습을 떠올리면 그 누구도 이해 못하는 이론을 주장하는, 남들과 소통하지 않는 괴짜부터 떠오르는데 확실히 과학이 일반인에게 친근해지고 가까이 다가갈수록 과학의 가치? 소수만이 향유한다는 고고함에서 오는 그들만의 자존심이 좀 약해지는 것 같긴하다. 그렇지만 그런 한편으로는 난 일반인들이 더욱 더 대중화를 통해 기본과학 소양을 높이면 기존의 막연한 '와 어렵다..' 정도에서 그치는게 아닌 '와 어떻게 이런 논리를 전개했고 이런 발상을 했지?'와 같이 오하려 대중들이 과학자들을 더 고평가해주고 존중하는 문화가 탄생할 수 있다고 생각한다.
