롱테일 경제학 내용 추가

--- a/_posts/knowledge/2021-09-05-1.md
+++ b/_posts/knowledge/2021-09-05-1.md
@@ -1,1 +1,44 @@
+---
+title:  "롱테일 경제학"
+search: false
+categories: 
+  - knowledge
+tags:
+  - economics
+  - longtail
 
+excerpt: "롱테일 경제학의 기반, 파레토 법칙에 대하여"
+---
+
+# What is the Long Tail?
+
+
+## 1. 긴꼬리
+긴 꼬리(The Long Tail)는 파레토 법칙을 그래프에 나타냈을 때 꼬리처럼 긴 부분을 형성하는 80% 부분을 말한다.  
+![image](https://user-images.githubusercontent.com/68508521/132113976-d90ebc43-5b98-433e-b9e0-aa3e5a3834c0.png)  
+
+
+위는 파레토 법칙에 의한 80:20의 집중현상을 나타내는 그래프이다. x축의 양의 무한대로 길게 뻗어 나가나 기하급수적으로 줄어들기 때문에 전체의 20% 정도를 차지한다.
+
+>전통적인 시장에서는 어느 한 종목에서는 보통 잘 팔리는 상위 20%가 전체 매출의 80%를 차지한다고 하는 파레토 법칙에 따르고 있다. 따라서 한정된 공간과 자원을 가진 매장에서는 잘 팔리는 물건에 보다 집중하여 전시하는 경향이 있다. 예를 들면 베스트셀러 책을 잘보이는 곳에 커다랗게 쌓아놓고 판매하는 것이다. 따라서 일반적인 소매점의 경우 재고 및 상품 매장 진열 공간의 제한 문제로 인해 잘 팔리는 물품에만 집중하여 마케팅하고 나머지는 재고가 되어 처치 곤란한 경우가 많았다. 그러나 최근의 인터넷등의 기술의 발달로 재고나 물류에 드는 비용이 종래보다 훨씬 저렴해졌다. 특히 일반적인 소매점에 비해 인터넷을 기반으로 하는 온라인 비즈니스의 경우 베스트셀러와 함께 그동안 간과되어 온 비인기 상품에 대한 소비자의 진입장벽을 낮출 수 있게 되었다. 이렇게 개별적으로는 비인기 상품도 전체적으로 모이면 틈새 시장을 만들 수 있다. 실제로 아마존과 같은 인터넷 기반 기업에서는 이렇게 활성화된 틈새 시장이 매출의 20~30%에 육박하여 전체 이익면에서도 많은 부분에 기여하게 된 사례가 있는데 그리 많이 팔리지 않는 서적들이나 일부만이 좋아하는 종류의 음반이라도 효과적인 판매와 물류를 통해 많은 이윤을 창출할 수 있었다. 이러한 현상에서 전통적인 파레토 법칙에 반대되는 새로운 비즈니스 모델을 만들게 되었으며 이를 "롱테일 현상"이라고 한다. by wikipedia  
+
+
+## 2. 파레토 법칙
+
+
+파레토 법칙(혹은, 80대 20 법칙)이란 '전체 결과의 80%가 전체 원인의 20%에서 일어나는 현상'을 가리킨다. 예를 들어, 20%의 고객이 백화점 전체 매출의 80%에 해당하는 만큼 쇼핑하는 현상을 설명할 때 이 용어를 사용한다. 2 대 8 법칙라고도 한다.  
+
+
+'이탈리아 인구의 20%가 이탈리아 전체 부의 80%를 가지고 있다'라고 주장한 이탈리아의 경제학자 빌프레도 파레토의 이름에서 따왔다.  
+
+
+__ex)__  
+-통화한 사람 중 20%와의 통화시간이 총 통화시간의 80%를 차지한다.  
+-즐겨 입는 옷의 80%는 옷장에 걸린 옷의 20%에 불과하다.  
+-전체 주가상승률의 80%는 상승기간의 20%의 기간에서 발생한다.  
+-20%의 운전자가 전체 교통위반의 80% 정도를 차지한다.  
+-20%의 범죄자가 80%의 범죄를 저지른다.  
+-성과의 80%는 근무시간 중 집중력을 발휘한 20%의 시간에 이뤄진다.  
+-두뇌의 20%가 문제의 80%를 푼다. 우수한 20%의 인재가 80%의 문제를 해결한다. 혹은 뇌의 20프로만 사용하여 문제 해결에 필요한 80%를 해결한다  
+-운동선수 중 20%가 전체 상금 80%를 싹쓸이한다.  
+-인터넷 유저의 20%가 80%의 양질의 정보를 생산한다.  
