--- a/_posts/2021-02-28-post4.md
+++ b/_posts/2021-02-28-post4.md
@@ -2,15 +2,14 @@
 title:  "테스트 구동"
 search: false
 categories: 
-  - tips
+  - github
 tags:
-  - test
-  - local_server
+  - blog
+
 excerpt: "로컬 서버에서 확인"
 ---
 
-by using windows powershell
-===
+## windows powershell을 이용하는 방법
 
 1. change dir
 
