--- a/_posts/blog/2021-09-05-4.md
+++ b/_posts/blog/2021-09-05-4.md
@@ -2,7 +2,7 @@
 title:  "참고 링크"
 search: false
 categories: 
-  - tips
+  - github
 tags:
   - markdown
   - blog
@@ -30,7 +30,7 @@ excerpt: "reference"
 
 
 
-4. blog - github
->https://github.com/simplehanlab/simplehanlab.github.io
+4. 참고할만한  github blog
+>https://github.com/ansohxxn/ansohxxn.github.io
 
 
