--- a/_posts/knowledge/2021-09-05-2.md
+++ b/_posts/knowledge/2021-09-05-2.md
@@ -17,5 +17,8 @@ GitHub랑 연동해서 개발 환경을 세팅해주는 온라인 IDE
 내 github 주소 앞에 "gitpod.io/#/"를 붙이면 된다.
 
 ```
-gitpod.io/#/simple4logic/simple4logic.github.io
-```
+gitpod.io/#/https://github.com/simple4logic/simple4logic.github.io
+```   
+
+월 50시간까지 무료로 제공된다.  
+vs-code와 비슷한 개발환경을 제공하므로 다양한 extensions를 이용할 수도 있다.
