--- a/_posts/knowledge/2021-09-05-2.md
+++ b/_posts/knowledge/2021-09-05-2.md
@@ -21,4 +21,13 @@ gitpod.io/#/https://github.com/simple4logic/simple4logic.github.io
 ```   
 
 월 50시간까지 무료로 제공된다.  
-vs-code와 비슷한 개발환경을 제공하므로 다양한 extensions를 이용할 수도 있다.
+vs-code와 비슷한 개발환경을 제공하므로 다양한 extensions를 이용할 수도 있다.  
+<br/>
+
+## 간단한 사용법  
+
+1. 위 링크로 들어가서 코드를 수정한 이후, branch 관리로 들어간다(좌측 메뉴바 세번째).
+2. branch에서 + 버튼을 눌러 stage changes로 보낸다.
+3. 맨 위에 check 표시를 누르고, commit comment를 작성한 뒤에 ctrl+enter을 누른다.
+4. '•••' 버튼을 누르고 push 해서 github repository로 보낸다.
+
