--- a/_posts/plan/2021-09-05-1.md
+++ b/_posts/plan/2021-09-05-1.md
@@ -7,9 +7,8 @@ categories:
 
 ## 앞으로 써나갈 글들
 
-1. 책 읽고 난 이후에 독후감 형태로 글 남기기
-2. gitpod 사용법
-3. code-server 사용법
-4. nas를 통한 원격 서버 구축 방법
-5. github 블로그 개발일지
-6. 감사일기 적고 업로드하기
+1. 책 읽고 난 이후에 독후감 남기기
+2. code-server 사용법
+3. nas를 통한 원격 서버 구축 방법
+4. github 블로그 개발일지
+5. 감사일기 적고 업로드하기
