--- a/_posts/knowledge/2021-09-05-3.md
+++ b/_posts/knowledge/2021-09-05-3.md
@@ -6,7 +6,7 @@ categories:
 tags:
   - github_gist
 
-excerpt: "간단한 코딩엔 gist"
+excerpt: "간단한 코드 메모엔 gist를 써보자!"
 ---
 GitHub Gist는 GitHub과는 달리, private도 무료이다.  
 주로 코드조각(Code Snippet), 로그, 메모 등을 남기는데 사용하기 좋다.  
