--- a/_posts/vacation_diary/2021-09-10-1.md
+++ b/_posts/vacation_diary/2021-09-10-1.md
@@ -5,35 +5,58 @@ categories:
   - diary
 tag:
   - vacation
-excerpt: "휴가 1일차"
+excerpt: "휴가 2일차"
 ---
 
-# 휴가 1일차
+# 휴가 2일차
 
-6시보다 5분 일찍 눈이 떠져서 먼저 씻을 준비를 했다. 평소보다 좀 들떴던 것 같다. 씻으며 점호하러 나가는 인원들을 바라보는 기분이 조금 싱숭생숭했다. 출타하고 복귀하면 선임 두 분이 떠나신 뒤라서 마지막에 고생했다고 인사 한 마디 해드렸다. 그때 역시 참 복잡한 기분이 들었다. 세달동안 같이 생활하던 이들이 다녀오면 더이상 못본다는 것이...   
+어제 분명 새벽 2시쯤에 평소보다 훨씬 늦게 잔 것 같은데도 06시 28분즈음에 눈이 번쩍 뜨였다... 사람이 6개월 동안 일정하게 자고 일어나다 보니 이렇게 되는가 보다. 아침으로는 어제 먹다 남은 연어를 스테이크 식으로 구워먹었다!  
+
+<center>
+<img src= "https://user-images.githubusercontent.com/68508521/133478232-55b3244c-5353-4d26-873e-ac9a8c570ca1.png" width="500" height="570">  
+
+ 맛있어 보이는데 생각보다 싱거움 ㅋㅋ
+</center>
+
+ 가벼운 식사를 마치고 복귀 후의 첫(?) 약속을 준비하기 위해 오랜만에 옷장을 뒤적였다. 하도 오랜만이라 집에 무슨 옷이 있는지도 가물가물했다. 대충 마지막까지 즐겨입던 반팔과 바지를 챙겨입고 유리를 만나러 나갔다.  
+
+제대로 된 첫 끼니는 바로 텐동이었다. 종종 찾아갔던 강남역 근처의 '나이스샤워'에서 아나고 텐동을 먹었다. 진짜 이렇게 제대로된 맛난 한 끼를 먹은게 엃마만인지 정말 감격스러운 맛이었던 것 같다 ㅋㅋ  
+
+<br/>
+
+<center>
+<img src= "https://user-images.githubusercontent.com/68508521/133474911-8646299e-f64a-481e-82ad-2acc5acb7d63.jpg" width="500" height="570">  
+ 
+ 
+ 보기만 해도 다시 침이 고인다... 
+</center>
+
+ 
+<br/>
+
+ 아무튼 이렇게 맛있는 한 끼를 먹고 디저트를 먹으러 폴 바셋으로 갔다. 예전에 강남에서 과외하던 시절에 종종 가던 폴 바셋이었는데, 오늘처럼 친구랑 같이 간 적은 처음이었다.  
+ 가볍게 음료를 고르면서 디저트를 골랐는데, s'more 쿠키랑 마들렌이 정말 달짝지근하고 맛있었다. 
 
 
-여러가지 감정을 가슴에 앉고 상황실에서 07시가 되기까지 기다렸다. 시간이 되자 칼같이 떠났던 것 같다. 위병소를 향해 걸어가는 도중에도 아직까지 휴가를 나간다는 실감이 나질 않았다. 위병소 밖에서 카메라를 풀고 택시를 처음 잡았을 때 비로소 '아 진짜 밖이구나' 라는게 생생히 느껴졌다.  
+<center>
+<img src= "https://user-images.githubusercontent.com/68508521/133476074-f95a0462-4448-4000-984c-1980c3bd61f5.png" width="500" height="370">
+</center>
+
+<br>
+ 
+ 디저트를 먹다보니 자연스럽게 디저트 이야기가 나왔다. 난 평소에도 단거라면 사족을 못쓰는 터라 맨날 디저트집을 찾아다녔는데, 주위에 단걸 그다지 좋아하는 애들이 없어서 그런지 같이 디저트 카페 탐방이나 이런 이야기를 나눌 기회가 전혀 없었다. 반년만에 봐서 할말이 없으면 어쩔까 나름 고민...도 했는데 진짜 기우였던 것 같다. 디저트 이야기나 해커톤 때 생고생했던 이야기를 하다보니 진짜 시간가는줄 모르고 떠들었던 것 같다.  
+
+<br/>
+
+저녁에는 문영이랑 만나기로 했다. 문영이도 군대에서 카톡은 자주해서 그런지 다시 만나도 참 익숙했다. 문영이는 언제봐도 참 한결같은 것 같다 ㅋㅋ 만나자 마자 뭐먹을지 고민하다가 역시 일식이 무난하게 최고라는 나의 판단하게 덮밥을 먹으러 갔다. 처음엔 연어덮밥을 먹어야지.. 했다가 생각해보니 집에 연어가 많아서 그냥 튀김덮밥이나 먹자는 마인드로 모둠덮밥을 시켰다. 
+
+<center>
+<img src= "https://user-images.githubusercontent.com/68508521/133476823-36cd9c2f-7737-4ca7-8725-b3dee8a3531f.png" width="500" height="370">
 
 
-어제 생활관에 후임이 한 명 더 들어와서 정신없이 시간을 보낸 탓인지, 정작 내 출타계획은 크게 정해진 것이 없었다. 아침에 설렁탕 집가서 한 끼 먹으면 좋다는 선임의 말을 들었지만, 걸어서 무려 30분이라는 카카오맵의 냉혹한 분석에 그냥 얌전히 택시타고 창원중앙역까지 가서 거기에서 도너츠로 아침을 떼우기로 결심했다.  
+존맛탱이었다 ㄹㅇ
+</center>
 
-택시를 처음 탔을 때 말투가 너무 익숙해진 탓인지 자꾸 군대식 말투가 튀어나왔다 ㅋㅋ 사람이 참 갑자기 변하기 어려운 것 같다. 아무튼 25분정도 걸려서 창원중앙역에 도착한 후에, 사회에서의 첫 소비는 도넛과 모닝커피였다. 배가 무척 고파서 달디 단 도넛을 무려 6개나 사서 포장했다. 역시 배고플때 먹을걸 이것저것 고르면 안된다... 세개만 먹고 나머지는 쭉 들고다녔다.  
+<br>
 
-열차를 기다리다가 9시에 TMO가 여는 시간이 되어서 기차표 값을 환불받으려고 찾아갔다. 혹시 내가 잘못한거면 어쩌지 싶었는데 거기 tmo병이 능숙하게 해줘서 금방 잘 끝났다. 처음 계획은 창원중앙-동대구-수원 이었는데, 중간에 붕 뜨는 시간이 너무 길어서 창원중앙-대전-수원 으로 계획을 수정했다. 사실 대전에 있는 성심당 생각나서 이렇게 바꾼거 맞다 ㅎㅎ  
-
-창원중앙에서 대전까지는 KTX 산천을 타고 대략 1시간 40분정도 걸렸다. 카카오맵을 실시간으로 확인하면서 갔는데, 분명 거리가 여태까지 온 것보다 훨씬 많이 남아있는데 시간이 반의 반도 안남아있어서 지연되나 싶었지만 내 기우였는지 제시각에 잘만 도착했다 ㅋㅋ 대전에 내리자마자 성심당에서 빵을 쓸어담..지는 않았고 15000어치 튀김소보로나 유명한 빵들을 가득 담았다!  
-
-대전에서 수원까지는 ITX새마을을 타고 대략 1시간 10분 정도 걸렸다. 이것 역시 예상된 시간에 아주아주 정확히 도착했다. 수원역에서는 뭐 자연스럽게 분당선을 타고 정자역에 갔다. 정자역에서 친구를 만나기로 했기에, 군복을 입은 채(...)로 노래방을 가서 6곡  부르고 왔다. 목상태도 안좋고 너무 배고픈 탓에 고작 6곡 정도에서 그쳤다 ㅠㅠ  
-
-집에 오자마자 엄마가 사뒀다고 하신 연어를 촵촵촵 썰어서 밥이랑 같이 먹었다. 휴가 나오기 전에는 그렇게나 먹고 싶었던 연어인데, 막상 썰어서 먹어보니 내가 너무 기억을 미화시킨 탓인지 맛있긴 한데 기대에는 못미쳤다.. ㅠㅠ 그래두 맛있으니 또 먹을 예정이긴 하다 ㅋㅋ  
-
-오랜만에 노트북도 만지고 집안 이곳저곳을 거닐다가 6시에 기다리고 기다리던 토나리에서 식사를 할 수 있었다. 너무 배고팠던 탓인지, 바보같이 사진 찍는걸 홀라당 까먹어서 내가 무얼 먹었는지도차 기록에 남기지 못했다....ㅋㅋ 아무튼 맛있으면 됐다.  
-
-먹고 귀가하는 길에 lalee 에서 조각케이크 두 개를 포장해 들고와서 엄마랑 아주 오랜만에 조각케잌을 먹으면서 아주 긴 이야기를 나눴다. 내가 참 말이 많은 사람이란게 새삼 느껴졌다 ㅎㅎ 홀가분한 자유를 만끽하면서도 새로운 친구는 어찌 됐을지, 후임들이 나 없이 무사히(?) 보내고 있는지 종종 궁금해지곤 했다. 그렇다고 휴가나간 선임이 카톡하면 뭔가 주책맞은 것 같아서 그냥 복귀하고 한꺼번에 물어보기로 했다 ㅎㅎ.  
-
-밤에 잠깐 롤을 켜서 정말정말 오랜만에 칼바람을 돌려봤다. 진짜 몇달만에 보는건지 스킬 한두개 날아가는 것만 지켜봐도 어지러웠다. 그리고 5개월이나 적응된 몸은 착실하게도 10시가 넘어서는 순간부터 자라고 신호를 보냈다. 컴퓨터를 정리하고 하루를 마무리하기 전에 생각해보니 이런 기록들도 다 나중에 추억이 되겠다 싶어서 나의 메모장과도 같은 이곳에 휴가일기를 남기자고 생각했다. 나중에 시간이 지나서 꺼내 읽으면 분명 옛날 생각도 나고 재밌있...겠지?  
-
-내일부터는 오늘 잔뜩 약속 잡아놓은 친구들을 만나기 시작한다. 당장 아점부터 약속이 있으니 참 바쁜 하루일 것이다. 인복이 넘쳐서인지? 만날 사람이 너무나도 많아서 하루 사라진 휴가가 참 아쉽게 다가왔다. 이걸 안적을 뻔했네... 원래 휴가 복귀는 17일이지만, 높으신 분의 명령으로 16일까지 복귀하라는 지침이 내려왔단다 ㅎ... 오후에 행보관님 전화받고 좀 좌절했지만, 뭐 휴가 하루 아껴서 나중에 또 나가지 라는 마인드로 버텨보려는 중이다. 근데 마음 가짐이랑 별개로 좀 빡?치는 것 같긴 하다 ㅋㅋ^^
-
-
+역시 사람은 짬밥이 아닌 사회의 음식을 먹고 살아야 한다는게 오늘의 결론이다. 첫날부터 진짜 너무 알찬 휴가를 보내서 ㄹㅇ 만족스러웠다. 휴가야 이대로만 가자...
