--- a/_posts/vacation_diary/2021-09-09-1.md
+++ b/_posts/vacation_diary/2021-09-09-1.md
@@ -34,6 +34,6 @@ excerpt: "휴가 1일차"
 
 밤에 잠깐 롤을 켜서 정말정말 오랜만에 칼바람을 돌려봤다. 진짜 몇달만에 보는건지 스킬 한두개 날아가는 것만 지켜봐도 어지러웠다. 그리고 5개월이나 적응된 몸은 착실하게도 10시가 넘어서는 순간부터 자라고 신호를 보냈다. 컴퓨터를 정리하고 하루를 마무리하기 전에 생각해보니 이런 기록들도 다 나중에 추억이 되겠다 싶어서 나의 메모장과도 같은 이곳에 휴가일기를 남기자고 생각했다. 나중에 시간이 지나서 꺼내 읽으면 분명 옛날 생각도 나고 재밌있...겠지?  
 
-내일부터는 오늘 잔뜩 약속 잡아놓은 친구들을 만나기 시작한다. 당장 아점부터 약속이 있으니 참 바쁜 하루일 것이다. 인복이 넘쳐서인지? 만날 사람이 너무나도 많아서 하루 사라진 휴가가 참 아쉽게 다가왔다. 이걸 안적을 뻔했네... 원래 휴가 복귀는 17일이지만, 높으신 분의 명령으로 16일까지 복귀하라는 지침이 내려왔단다 ㅎ... 오후에 행보관님 전화받고 좀 좌절했지만, 뭐 휴가 하루 아껴서 나중에 또 나가지 라는 마인드로 버텨보려는 중이다. 근데 마음 가짐이랑 별개로 좀 빡?치는 것 같긴 하다 ㅋㅋ^^
+내일부터는 오늘 잔뜩 약속 잡아놓은 친구들을 만나기 시작한다. 당장 아점부터 약속이 있으니 참 바쁜 하루일 것이다. 인복이 넘쳐서인지? 만날 사람이 너무나도 많아서 하루 사라진 휴가가 참 아쉽게 다가왔다. 이걸 안적을 뻔했네... 원래 휴가 복귀는 17일이지만, 높으신 분의 명령으로 16일까지 복귀하라는 지침이 내려왔단다 ㅎ... 오후에 행보관님 전화받고 좀 좌절했지만, 뭐 휴가 하루 아껴서 나중에 또 나가지 라는 마인드로 버텨보려는 중이다. 근데 마음 가짐이랑 별개로 좀 빡?치는 것 같긴 하다 ㅋㅋㅋ^^
 
 
