--- a/_posts/knowledge/2021-09-05-2.md
+++ b/_posts/knowledge/2021-09-05-2.md
@@ -14,15 +14,24 @@ excerpt: "웹으로 편리하게 개발하자!"
 
 GitHub랑 연동해서 개발 환경을 세팅해주는 온라인 IDE
 
-내 github 주소 앞에 "gitpod.io/#/"를 붙이면 된다.
+작업할 내 디렉토리 github 주소  앞에 "gitpod.io/#/"를 붙이면 된다.
 
+이건 블로그 포스팅용 디렉토리
 ```
 gitpod.io/#/https://github.com/simple4logic/simple4logic.github.io
 ```   
 
+다른 경로의 경우 이런식으로 하면 된다.
+
+```
+gitpod.io/#/https://github.com/simple4logic/(디렉토리명)
+```
+<br>
 월 50시간까지 무료로 제공된다.  
 vs-code와 비슷한 개발환경을 제공하므로 다양한 extensions를 이용할 수도 있다.  
 <br/>
+
+<br>
 
 ## 간단한 사용법  
 
