디렉토리 이동

--- a/_posts/knowledge/github/2021-09-05-1.md
+++ b/_posts/knowledge/github/2021-09-05-1.md
@@ -1,10 +1,11 @@
 ---
-title:  "테스트 구동"
+title:  "테스트 구동 방법"
 search: false
 categories: 
-  - github
+  - knowledge
 tags:
   - blog
+  - github
 
 excerpt: "로컬 서버에서 확인"
 ---
