--- a/_posts/knowledge/github/2021-09-05-4.md
+++ b/_posts/knowledge/github/2021-09-05-4.md
@@ -1,11 +1,12 @@
 ---
-title:  "참고 링크"
+title:  "github 참고 링크"
 search: false
 categories: 
-  - github
+  - knowledge
 tags:
   - markdown
   - blog
+  - github
 
 excerpt: "reference"
 ---
@@ -16,18 +17,12 @@ excerpt: "reference"
 > https://honbabzone.com/jekyll/start-gitHubBlog/#_datanavigationyml-%EC%88%98%EC%A0%95  
 
 
-
-
 2. markdown 문법
 > https://gist.github.com/ninanung/22266a9c7afbece6d899e1927248b85b  
 
 
-
-
 3. font size
 > https://devinlife.com/howto%20github%20pages/github-pages-settings/  
-
-
 
 
 4. 참고할만한  github blog
