--- a/_posts/diary/blog_developing_diary/2021-09-05-1st.md
+++ b/_posts/diary/blog_developing_diary/2021-09-05-1st.md
@@ -3,9 +3,10 @@ title:  "블로그 개발 일지[1]"
 search: false
 excerpt: "기초 공사"
 categories: 
-  - github
+  - diary
 tags:
   - blog
+  - develop
 --- 
 <!-- basic info -->
 
