--- a/_posts/diary/vacation_diary/2021-09-12-day4.md
+++ b/_posts/diary/vacation_diary/2021-09-12-day4.md
@@ -38,6 +38,7 @@ cafe Ivre의 커여운 마스코트
 <center>
 <img src= "https://user-images.githubusercontent.com/68508521/133930268-36a3fb05-7449-4aec-abbf-04f49555b976.jpg" width="400" height="270">  
 
+<img src= "https://user-images.githubusercontent.com/68508521/133930509-b7c37169-efab-4a78-aa49-bfdc6133f3d1.jpg" width="300" height="330">  
 
 솔직히 존맛탱인건 ㅇㅈ
 </center>
