--- a/_posts/diary/vacation_diary/2021-09-19-day4.md
+++ b/_posts/diary/vacation_diary/2021-09-19-day4.md
@@ -10,23 +10,15 @@ excerpt: "휴가 4일차"
 
 # 휴가 4일차
 
-벌써 휴가 4일차이다. 믿기지가 않았다 ㅋㅋ 새벽 4시까지 롤 단일모드로 애들이랑 개꿀잼파티 하다가 늦게 잤다보니 당연히도 늦게 일어났다. 대충 알람을 11시쯤으로 맞춰놨더니 12시쯤 되어서야 체크아웃을 했다. 솔직히 사먹은 고기는 좀 노맛이었는데 배달 시켜먹은게 ㄹㅇ 씹존맛탱이었다. 이걸 사진을 못찍었네;;  
-
-<br>
-
-아무튼 오늘 늦은 점심으로 준서랑 문영이랑 만나기로 했었는데 원래 밑밥을 깔아두긴 했었지만 진짜 개늦게 만났다. 2시가 되어서야 내가 집에 도착했고, 신촌에는 거진 4시 다되어야 도착했으니 사실 점심이 아니라 저녁을 먹어야 마땅하긴 했다. 다만 나랑 문영이가 각자 저녁을 집에서 먹어야 하는 사정이 있었기에 저녁 대신 카페로 떼우기로 했다. 신촌까지 가서 찾아간 카페는 바로 누나 카페였다.
-
-<br>
-
+벌써 휴가 4일차이다. 믿기지가 않았다 ㅋㅋ 새벽 4시까지 롤 단일모드로 애들이랑 개꿀잼파티 하다가 늦게 잤다보니 당연히도 늦게 일어났다. 대충 알람을 11시쯤으로 맞춰놨더니 12시쯤 되어서야 체크아웃을 했다. 솔직히 사먹은 고기는 좀 노맛이었는데 배달 시켜먹은게 ㄹㅇ 씹존맛탱이었다. 이걸 사진을 못찍었네;;  <br>
+아무튼 오늘 늦은 점심으로 준서랑 문영이랑 만나기로 했었는데 원래 밑밥을 깔아두긴 했었지만 진짜 개늦게 만났다. 2시가 되어서야 내가 집에 도착했고, 신촌에는 거진 4시 다되어야 도착했으니 사실 점심이 아니라 저녁을 먹어야 마땅하긴 했다. 다만 나랑 문영이가 각자 저녁을 집에서 먹어야 하는 사정이 있었기에 저녁 대신 카페로 떼우기로 했다. 신촌까지 가서 찾아간 카페는 바로 누나 카페였다. <br>
 <center>
 <img src= "https://user-images.githubusercontent.com/68508521/133929896-3ef8e83e-ed9d-4575-85d9-4f16bb1b336c.jpg" width="300" height="410">  
 
 <br>
 cafe Ivre의 커여운 마스코트
 </center>
-
 <br>
-
 박스스퀘어를 찾아가면 컨테이너 뭉텅이처럼 생긴 것들이 우리를 맞이해준다. 얼마 전에 2층으로 자리를 옮겼다 했더니, 2층 계단 올라가는 와중에 왼쪽에서 간판을 볼 수 있었다. 
 
 <center>
@@ -35,9 +27,7 @@ cafe Ivre의 커여운 마스코트
 <br>
 누나 카페임 (이브레가 아니라 이브흐였다...)
 </center>  
-
 <br>
-
 휴가 나와서 첨보는 거라서 좀 반갑게 인사? 한 번 해주고 말았다. 바로 음료랑 슈 시켰는데 가격이 좀 비싸긴 했다 ^~^ 신촌 상권이면 어쩔 수 없는 것 같긴 하다. 슈는 그래도 가격 대비 양이 튼실하긴 했다. 아침에 뭘 든든히 먹고 왔다면 훨씬 더 디저트가 맛나게 느껴졌을텐데 눈뜨고 처음 먹은 식사?가 슈여서 솔직히 디저트를 대하는 태도가 영 아니긴 했다. 뭐 맛만있으면 됐지.. 
 
 <center>
@@ -48,9 +38,7 @@ cafe Ivre의 커여운 마스코트
 <br>
 솔직히 존맛탱인건 ㅇㅈ
 </center>
-
 <br>
-
 그래도 가족chance를 받아서인지 마들렌을 두 개 서비스로 넣어준 것 같다. 내 친구들도 마찬가지고. 듣기로는 누나도 서비스 줄 때 다 결제한다던데 나름 신경을 써준 것 같다 ㅎㅎ 누나가 언젠가 읽을지는 잘 모르겠지만 잘먹었어 누나야  
 아 맞다 음료도 ㄹㅇ 깔쌈한 새콤달콤한 그 정석이었는데 사진을 못찍었네 ㅋㅋㅋ 미안 ^오^;;
 <br>
