--- a/_posts/diary/vacation_diary/2021-09-19-day4.md
+++ b/_posts/diary/vacation_diary/2021-09-19-day4.md
@@ -19,8 +19,7 @@ excerpt: "휴가 4일차"
 cafe Ivre의 커여운 마스코트
 </center>
 <br>
-박스스퀘어를 찾아가면 컨테이너 뭉텅이처럼 생긴 것들이 우리를 맞이해준다. 얼마 전에 2층으로 자리를 옮겼다 했더니, 2층 계단 올라가는 와중에 왼쪽에서 간판을 볼 수 있었다. 
-
+박스스퀘어를 찾아가면 컨테이너 뭉텅이처럼 생긴 것들이 우리를 맞이해준다. 얼마 전에 2층으로 자리를 옮겼다 했더니, 2층 계단 올라가는 와중에 왼쪽에서 간판을 볼 수 있었다.<br><br>
 <center>
 <img src= "https://user-images.githubusercontent.com/68508521/133930092-cc3dbf26-0b14-4ced-b68a-dbe9f0e11c6d.jpg" width="310" height="310">  
 
@@ -28,7 +27,7 @@ cafe Ivre의 커여운 마스코트
 누나 카페임 (이브레가 아니라 이브흐였다...)
 </center>  
 <br>
-휴가 나와서 첨보는 거라서 좀 반갑게 인사? 한 번 해주고 말았다. 바로 음료랑 슈 시켰는데 가격이 좀 비싸긴 했다 ^~^ 신촌 상권이면 어쩔 수 없는 것 같긴 하다. 슈는 그래도 가격 대비 양이 튼실하긴 했다. 아침에 뭘 든든히 먹고 왔다면 훨씬 더 디저트가 맛나게 느껴졌을텐데 눈뜨고 처음 먹은 식사?가 슈여서 솔직히 디저트를 대하는 태도가 영 아니긴 했다. 뭐 맛만있으면 됐지.. 
+휴가 나와서 첨보는 거라서 좀 반갑게 인사? 한 번 해주고 말았다. 바로 음료랑 슈 시켰는데 가격이 좀 비싸긴 했다 ^~^ 신촌 상권이면 어쩔 수 없는 것 같긴 하다. 슈는 그래도 가격 대비 양이 튼실하긴 했다. 아침에 뭘 든든히 먹고 왔다면 훨씬 더 디저트가 맛나게 느껴졌을텐데 눈뜨고 처음 먹은 식사?가 슈여서 솔직히 디저트를 대하는 태도가 영 아니긴 했다. 뭐 맛만있으면 됐지.. <br><br>
 
 <center>
 <img src= "https://user-images.githubusercontent.com/68508521/133930268-36a3fb05-7449-4aec-abbf-04f49555b976.jpg" width="400" height="270">  
