수정 테스트

--- a/_posts/diary/vacation_diary/2021-09-19-day5.md
+++ b/_posts/diary/vacation_diary/2021-09-19-day5.md
@@ -64,4 +64,4 @@ Urban Spirit의 시그니쳐 메뉴, Urban Summer
 유리는 다이어트한다고 아아 마셨다. 다이어트는 항상 내일부터 시작하는게 국룰인데 그 의지가 참 가상했다. 카페에서 얘기하면서 이제 친척이야기나 뮤지컬과 관련된 이야기를 주로 했는데 참 다이나믹했다. 나는 나대로, 유리를 유리대로 이래저래 많은 일들이 있었던 것 같다. 마지막에 헤어지면서 에코백 속에 소중히(?) 안뭉게지게 숨겨둔 조각케익을 선물해줬다. 왜냐면 이틀 전에 생일이었는데 그 생일선물인셈 이었다. 근데 주면서 생일 선물이라고 말 안해서 좀 당황한(?) 것 같기도 하다.  
 
 아무튼 (벌써) 5일차인 휴가는 참으로 알차게 흘러가는 것 같다. 나머지 휴가도 꼭 세상에서 가장 알차게 보내야겠다!<br> 
-> 오늘의 교훈 : 아무리 사소한 이야기라도 오랜만에 사회에 나와서 친구들의 소식을 전해듣고 같이 이야기 나누다보니, 입대 전에는 당연하게 느꼈던 이런 시간들이 너무나도 소중하게 느껴졌다.
+> 오늘의 교훈 : 아무리 사소한 이야기라도 오랜만에 사회에 나와서 친구들의 소식을 전해듣고 같이 이야기 나누다보니, 입대 전에는 당연하게 느꼈던 이런 시간들이 너무나도 소중하게 느껴졌다...!
