--- a/_posts/diary/vacation_diary/2021-09-19-day4.md
+++ b/_posts/diary/vacation_diary/2021-09-19-day4.md
@@ -10,7 +10,8 @@ excerpt: "휴가 4일차"
 
 # 휴가 4일차
 
-벌써 휴가 4일차이다. 믿기지가 않았다 ㅋㅋ 새벽 4시까지 롤 단일모드로 애들이랑 개꿀잼파티 하다가 늦게 잤다보니 당연히도 늦게 일어났다. 대충 알람을 11시쯤으로 맞춰놨더니 12시쯤 되어서야 체크아웃을 했다. 솔직히 사먹은 고기는 좀 노맛이었는데 배달 시켜먹은게 ㄹㅇ 씹존맛탱이었다. 이걸 사진을 못찍었네;;  <br>
+벌써 휴가 4일차이다. 믿기지가 않았다 ㅋㅋ 새벽 4시까지 롤 단일모드로 애들이랑 개꿀잼파티 하다가 늦게 잤다보니 당연히도 늦게 일어났다. 대충 알람을 11시쯤으로 맞춰놨더니 12시쯤 되어서야 체크아웃을 했다. 솔직히 사먹은 고기는 좀 노맛이었는데 배달 시켜먹은게 ㄹㅇ 씹존맛탱이었다. 이걸 사진을 못찍었네;;  
+<br>
 아무튼 오늘 늦은 점심으로 준서랑 문영이랑 만나기로 했었는데 원래 밑밥을 깔아두긴 했었지만 진짜 개늦게 만났다. 2시가 되어서야 내가 집에 도착했고, 신촌에는 거진 4시 다되어야 도착했으니 사실 점심이 아니라 저녁을 먹어야 마땅하긴 했다. 다만 나랑 문영이가 각자 저녁을 집에서 먹어야 하는 사정이 있었기에 저녁 대신 카페로 떼우기로 했다. 신촌까지 가서 찾아간 카페는 바로 누나 카페였다. <br>
 <center>
 <img src= "https://user-images.githubusercontent.com/68508521/133929896-3ef8e83e-ed9d-4575-85d9-4f16bb1b336c.jpg" width="300" height="410">  
