--- a/_posts/knowledge/github/2021-09-05-gitpod.md
+++ b/_posts/knowledge/github/2021-09-05-gitpod.md
@@ -16,10 +16,15 @@ GitHub랑 연동해서 개발 환경을 세팅해주는 온라인 IDE
 
 작업할 내 디렉토리 github 주소  앞에 "gitpod.io/#/"를 붙이면 된다.
 
-이건 블로그 포스팅용 디렉토리
+이건 블로그 포스팅용 디렉토리이고
 ```
 gitpod.io/#/https://github.com/simple4logic/simple4logic.github.io
 ```   
+
+이건 PS 연습용 디렉토리이다.
+```
+gitpod.io/#/https://github.com/simple4logic/PS_Practice
+``` 
 
 다른 경로의 경우 이런식으로 하면 된다.
 
