--- a/_posts/diary/blog_developing_diary/2021-09-25-2nd.md
+++ b/_posts/diary/blog_developing_diary/2021-09-25-2nd.md
@@ -8,6 +8,8 @@ tags:
   - blog
   - develop
 
+toc : true
+
 excerpt : "카테고리 재분류, 게시글 업로드"
 --- 
 <!-- basic info -->
@@ -24,4 +26,32 @@ excerpt : "카테고리 재분류, 게시글 업로드"
 ## 2. PS Review 게시글 업로드
 Bakjoon에서 푼 문제들 중 의미있는 문제들을 선별해서 이에 대한 간단한 Review를 업로드했다. 추후 knowledge/programming에도 PS과정에서 얻은 지식들을 추가해나갈 예정이다.
 
+## 3. 메인 display width 확장  
+블로그에 글이 표시되는 가운데 라인을 확장했다. 정확히는 양옆 sidebar의 길이를 줄여서 가운데를 넓혔다.
+
+경로 : github.io 폴더 > _sass 폴더 > _minimal-mistakes 폴더 > _variables.scss  
+
+```scss
+$right-sidebar-width-narrow: 100px !default;    // default 200px
+$right-sidebar-width: 200px !default;           // default 300px
+$right-sidebar-width-wide: 250px !default;      // default 400px
+```
+여기서 px값을 조금씩 수정해주면 된다. default값에 비하면 꽤 많이 줄였다. 원래 목적은 TOC간격을 줄이는 거였는데, 게시글도 시원시원하게 보이고 TOC간격도 줄어들고 이래저래 만족스럽다!
+
+## 4. 게시글에 underline 표시 것 제거
+게시글 제목을 보면 
+
+![image](https://user-images.githubusercontent.com/68508521/134759131-2a0d1fa4-9aff-48ed-a5a8-54c07583d472.png)  
+
+이런식으로 underline이 쳐져있다. 아마 link처리가 되어서인 것 같다.
+
+경로 : github.io 폴더 > _sass 폴더 > _minimal-mistakes 폴더 > _base.scss
+
+```scss
+a { //hyperlink의 태그값이 a이다.
+  text-decoration: none;                // 추가된 코드이다.
+```
+이런식으로 고칠 수 있다.
+
+> 출처 : https://eona1301.github.io/github_blog/GithubBlog-Content-Width/
 
