--- a/_posts/diary/blog_developing_diary/2021-09-25-2nd.md
+++ b/_posts/diary/blog_developing_diary/2021-09-25-2nd.md
@@ -38,7 +38,7 @@ $right-sidebar-width-wide: 250px !default;      // default 400px
 ```
 여기서 px값을 조금씩 수정해주면 된다. default값에 비하면 꽤 많이 줄였다. 원래 목적은 TOC간격을 줄이는 거였는데, 게시글도 시원시원하게 보이고 TOC간격도 줄어들고 이래저래 만족스럽다!
 
-## 4. 게시글에 underline 표시 것 제거
+## 4. 제목 underline 표시 제거
 게시글 제목을 보면 
 
 ![image](https://user-images.githubusercontent.com/68508521/134759131-2a0d1fa4-9aff-48ed-a5a8-54c07583d472.png)  
