--- a/_posts/diary/blog_developing_diary/2021-09-25-2nd.md
+++ b/_posts/diary/blog_developing_diary/2021-09-25-2nd.md
@@ -55,3 +55,21 @@ a { //hyperlink의 태그값이 a이다.
 
 > 출처 : https://eona1301.github.io/github_blog/GithubBlog-Content-Width/
 
+## 5. About 추가
+상단에 About을 추가해서 누르면 개인 profile을 볼 수 있도록 수정했다. 개인 프로필에 이미지도 넣어볼 예정.  
+1. 경로 : _data/navigation.yml  
+여기서 -title에 about을 추가했고 url을 /about/으로 설정했다.
+
+2. 경로 : _pages/about.md
+about.md라는 파일을 새로 생성했다. 그 후에 md 파일 맨위에 다음을 추가한다. 
+
+```md
+---
+permalink: /about/
+title: "About"
+excerpt: "About Me"
+search: false
+---
+```
+그리고 그 아래에 개인 profile을 작성하면 끝!
+
