--- a/_posts/PS/IO/2021-09-25-Q2741.md
+++ b/_posts/PS/IO/2021-09-25-Q2741.md
@@ -56,7 +56,7 @@ int main(){
 ## 추가 내용
 > 어라 얘 왜 C++ 함수의 cout 아니라 C의 printf로 했지? 
 
-이걸 발견했으면 정답이다. 바로 함수의 차이.cout이 ㅈㄴ 느린함수다. 여기서 시간 ㅈㄴ쳐먹음. 다른거 다 똑같이 놔도 이거 하나 바꾼거 때문에 시간이 초과됐다.
+이걸 발견했으면 정답이다. 바로 함수의 차이. cout이 진짜 느린함수다. 여기서 시간 다 잡아먹음. 다른거 다 똑같이 놔도 이거 하나 바꾼거 때문에 시간이 초과됐다.
 
 ## 총평
 어떤 함수를 쓰느냐에 따라 실행 속도에 큰 차이가 있을 수 있다는 걸 알려준 소중한 문제.
