category 재개편, 태그 수정

--- a/_posts/Broad_knowledge/economics/2021-09-05-longtail.md
+++ b/_posts/Broad_knowledge/economics/2021-09-05-longtail.md
@@ -2,12 +2,12 @@
 title:  "롱테일 경제학"
 search: false
 categories: 
-  - knowledge
+  - Broad_knowledge
 tags:
   - economics
-  - longtail
 
 excerpt: "롱테일 경제학의 기반, 파레토 법칙에 대하여"
+toc : true
 ---
 
 # What is the Long Tail?
