--- a/_posts/Broad_knowledge/github/2021-09-05-gitpod.md
+++ b/_posts/Broad_knowledge/github/2021-09-05-gitpod.md
@@ -2,10 +2,11 @@
 title:  "GitPod 사용법"
 search: false
 categories: 
-  - knowledge
+  - Broad_knowledge
 tags:
   - gitpod
   - web_IDE
+toc : true
 
 excerpt: "웹으로 편리하게 개발하자!"
 ---
