--- a/_posts/C++_MEMO/2021-10-01-Scanf.md
+++ b/_posts/C++_MEMO/2021-10-01-Scanf.md
@@ -2,13 +2,13 @@
 title:  "Scanf 함수의 반환값"
 search: false
 categories: 
-  - PS
+  - C++_MEMO
 tags:
-  - problem_solving
   - programming
-  - knowledge
   - I/O
+  - C++
 excerpt: "scanf 함수의 반환값을 이용한 loop"
+toc : true
 ---
 
 # Scanf 함수의 반환값에 대해 알아보자.
