--- a/_posts/C++_MEMO/2021-10-01-flush.md
+++ b/_posts/C++_MEMO/2021-10-01-flush.md
@@ -2,13 +2,13 @@
 title:  "Flush에 대해서"
 search: false
 categories: 
-  - PS
+  - C++_MEMO
 tags:
-  - problem_solving
   - programming
-  - knowledge
   - I/O
+  - C++
 excerpt: "Flush의 작용"
+toc : true
 ---
 
 # I/O에서 Flush의 역할
