--- a/_posts/C++_MEMO/2021-10-01-getline.md
+++ b/_posts/C++_MEMO/2021-10-01-getline.md
@@ -2,13 +2,13 @@
 title:  "getline과 I/O"
 search: false
 categories: 
-  - PS
+  - C++_MEMO
 tags:
-  - problem_solving
   - programming
-  - knowledge
   - I/O
+  - C++
 excerpt: "상황에 따른 유연한 I/O"
+toc : true
 ---
 
 # 상황에 따른 입력 방식을 알아보자.
