--- a/_posts/Programming_Practice/C++/Array/2021-10-01-Q3052_C++.md
+++ b/_posts/Programming_Practice/C++/Array/2021-10-01-Q3052_C++.md
@@ -1,15 +1,17 @@
 ---
-title:  "Bakjoon Q3052"
+title:  "Bakjoon Q3052" - C++
 search: false
 categories: 
-  - PS
+  - Programming_Practice
 
 tags:
   - bakjoon
   - code_review
   - Array
+  - C++
 
 excerpt: "Array Basic"
+toc : true
 ---
 
 # __Q3052__
