--- a/_posts/Programming_Practice/C++/IO/2021-09-22-Q11719_C++.md
+++ b/_posts/Programming_Practice/C++/IO/2021-09-22-Q11719_C++.md
@@ -1,13 +1,14 @@
 ---
-title:  "Bakjoon Q11719"
+title:  "Bakjoon Q11719" - C++
 search: false
 categories: 
-  - PS
+  - Programming_Practice
 
 tags:
   - bakjoon
   - code_review
   - I/O
+  - C++
 
 excerpt: "I/O Basic"
 
