--- a/_posts/Broad_knowledge/github/2021-09-16-put_image.md
+++ b/_posts/Broad_knowledge/github/2021-09-16-put_image.md
@@ -2,12 +2,13 @@
 title:  "MD파일에 이미지 삽입하는 방법"
 search: false
 categories: 
-  - knowledge
+  - Broad_knowledge
 tags:
   - image
   - markdown
 
 excerpt: "github issue를 이용하는 방법!"
+toc : true
 ---
 
 # Github Issue 사용법
