--- a/_posts/Programming_Practice/C++/IO/2021-09-24-Q11721_C++.md
+++ b/_posts/Programming_Practice/C++/IO/2021-09-24-Q11721_C++.md
@@ -1,15 +1,17 @@
 ---
-title:  "Bakjoon Q11721"
+title:  "Bakjoon Q11721" - C++
 search: false
 categories: 
-  - PS
+  - Programming_Practice
 
 tags:
   - bakjoon
   - code_review
   - I/O
+  - C++
 
 excerpt: "I/O Basic"
+toc : true
 ---
 # __Q11721__
 ___
