--- a/_posts/Programming_Practice/C++/IO/2021-09-25-Q2741_C++.md
+++ b/_posts/Programming_Practice/C++/IO/2021-09-25-Q2741_C++.md
@@ -1,15 +1,17 @@
 ---
-title:  "Bakjoon Q2741"
+title:  "Bakjoon Q2741" - C++
 search: false
 categories: 
-  - PS
+  - Programming_Practice
 
 tags:
   - bakjoon
   - code_review
   - I/O
+  - C++
 
 excerpt: "I/O Basic"
+toc : true
 ---
 
 # __Q2741__
