--- a/_posts/Daily_Record/blog_developing_diary/2021-09-25-2nd.md
+++ b/_posts/Daily_Record/blog_developing_diary/2021-09-25-2nd.md
@@ -3,7 +3,7 @@ title:  "블로그 개발 일지[2]"
 search: false
 excerpt: "게시글 추가 및 서브 블로그 창설"
 categories: 
-  - diary
+  - Daily_Record
 tags:
   - blog
   - develop
