--- a/_posts/Daily_Record/blog_developing_diary/2021-10-03-3rd.md
+++ b/_posts/Daily_Record/blog_developing_diary/2021-10-03-3rd.md
@@ -3,7 +3,7 @@ title:  "블로그 개발 일지[3]"
 search: false
 excerpt: "좌측 sidebar 추가"
 categories: 
-  - diary
+  - Daily_Record
 tags:
   - blog
   - develop
@@ -92,4 +92,4 @@ doc:
 ```
 가장 바깥 title이 큰 카테고리 명이고, 그 아래 children에 포함된 title들이 소 카테고리명과 그 주소이다. 비슷하게 작성하면서 추가해나가면 된다. 아까 doc이라는 이름을 기억해 두라고 했는데, navigation.yml 파일에 저장한 이름이 doc: 이기 때문이다. 여기서 이름이 바꾼다면 config.yml에서도 바꿔주어야 한다.
 
-이렇게 추가하면 home화면과 post글을 읽는 동안은 sidebar가 정상적으로 나타났다. 다만 아직은 어색한게 categories에 들어가 있는 동안에는 또 sidebar가 출현하지 않는다. 이건 추후 수정해야할 사항.
+이렇게 추가하면 home화면과 post글을 읽는 동안은 sidebar가 정상적으로 나타났다. 다만 아직 C++ 항목은 눌러도 그 카테고리로 이동하진 않는 듯 하다.
