--- a/_posts/Daily_Record/blog_developing_diary/2021-10-10-4th.md
+++ b/_posts/Daily_Record/blog_developing_diary/2021-10-10-4th.md
@@ -9,27 +9,17 @@ tags:
 
 excerpt : "Toc as defaults"
 --- 
-<!-- basic info -->
 
 ## toc를 디폴트 값으로 넣었다.  
 config.yml을 좀 수정해서 디폴트 값으로 toc를 넣었다. 점점 config.yml 파일이 이해가 가기 시작하는 것 같다.  
 그 방법에 대해 간단히 정리해놓겠다. 
 
-### 1. _config.yml 수정
+### _config.yml 수정
+
+_config.yml 파일의 251번째 라인을 보면 defaults 항목에 포함된 #_posts를 발견할 수 있다.
 
 ```yml
-# Defaults
-defaults:
-  # default
-  - scope:
-      path: ""
-    values:
-      layout: single
-      author_profile: true
-      sidebar:
-        nav: doc
-
-  # _posts
+ # _posts
   - scope:
       path: ""
       type: posts
@@ -41,53 +31,12 @@ defaults:
       comments: true
       share: false
       related: true
-      toc_ads: true
+      toc : true #toc를 디폴트로 넣어주는 옵션
+      toc_ads: false #true 
       toc_sticky: true
       sidebar:
         nav: doc
-
-  # _pages
-  - scope:
-      path: ""
-      type: pages
-    values:
-      layout: single
-      author_profile: true
-      read_time: false
-      comments: false
-      share: false
-      related: false
-      sidebar:
-        nav: doc
 ```
+여기서 "toc : true" 라는 항목을 추가해서 넣어주었다. 대충 맥락에서 짐작할 수 있듯, 이 항목들은 posts를 볼 때 어떤 값들이 defaults로 적용되는지 설정하는 것이다. 위를 보면 포스팅을 볼 때도 author_profile이 나오도록 설정이 되어있다. 추가로, toc_sticky 옵션은 false로 해놓으면 toc가 상단에 고정되어 스크롤을 따라서 내려오지 않는다.
 
-config.yml 파일에서 각 타입마다
-```
-sidebar :
-  nav : doc 
-```
-을 추가해주었다. 여기서 doc 이름을 잘 기억해두어야 한다.
-
-### 2. _data/navigation.yml 수정
-
-_data/navagation.yml 파일에서 다음과 같이 수정한다.
-
-```yml
-doc:
-  - title: C++
-    children:
-      - title : C++ Memo
-        url : /categories/#C++_MEMO
-      - title : C++ Practice
-        url : /categories/#C++_Practice
-
-  - title : etc      
-    children:
-      - title : Broad Knowledge
-        url : /categories/#broad-knowledge
-      - title : Plan
-        url : /categories/#plan
-```
-가장 바깥 title이 큰 카테고리 명이고, 그 아래 children에 포함된 title들이 소 카테고리명과 그 주소이다. 비슷하게 작성하면서 추가해나가면 된다. 아까 doc이라는 이름을 기억해 두라고 했는데, navigation.yml 파일에 저장한 이름이 doc: 이기 때문이다. 여기서 이름이 바꾼다면 config.yml에서도 바꿔주어야 한다.
-
-이렇게 추가하면 home화면과 post글을 읽는 동안은 sidebar가 정상적으로 나타났다. 다만 아직 C++ 항목은 눌러도 그 카테고리로 이동하진 않는 듯 하다.
+아무튼 나중에 좀 더 다듬고 싶으면 config.yml 파일을 잘 다듬어보면 될 것 같다.  
