--- a/_posts/BOJ_Practice/Array/2021-10-01-Q21093912_C++.md
+++ b/_posts/BOJ_Practice/Array/2021-10-01-Q21093912_C++.md
@@ -2,8 +2,7 @@
 title:  "Bakjoon Q21093912 - C++"
 search: false
 categories: 
-  - C++_Practice
-
+  - BOJ_Practice
 tags:
   - bakjoon
   - code_review
