--- a/_posts/BOJ_Practice/Array/2021-10-11-Q10809_C++.md
+++ b/_posts/BOJ_Practice/Array/2021-10-11-Q10809_C++.md
@@ -2,7 +2,7 @@
 title:  "Bakjoon Q10809 - C++"
 search: false
 categories: 
-  - C++_Practice
+  - BOJ_Practice
 tags:
   - bakjoon
   - code_review
