--- a/_posts/BOJ_Practice/Functions/2021-10-03-Q19246574_C++.md
+++ b/_posts/BOJ_Practice/Functions/2021-10-03-Q19246574_C++.md
@@ -2,8 +2,7 @@
 title:  "Bakjoon Q21093912 - C++"
 search: false
 categories: 
-  - C++_Practice
-
+  - BOJ_Practice
 tags:
   - bakjoon
   - code_review
