--- a/_posts/BOJ_Practice/IO/2021-09-24-Q11721_C++.md
+++ b/_posts/BOJ_Practice/IO/2021-09-24-Q11721_C++.md
@@ -2,8 +2,7 @@
 title:  "Bakjoon Q11721 - C++"
 search: false
 categories: 
-  - C++_Practice
-
+  - BOJ_Practice
 tags:
   - bakjoon
   - code_review
