--- a/_posts/BOJ_Practice/Math/2021-11-19-Q11653_C++.md
+++ b/_posts/BOJ_Practice/Math/2021-11-19-Q11653_C++.md
@@ -2,8 +2,7 @@
 title:  "Bakjoon Q11653 - C++"
 search: false
 categories: 
-  - C++_Practice
-
+  - BOJ_Practice
 tags:
   - bakjoon
   - code_review
