--- a/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-15-Q5_python.md
+++ b/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-15-Q5_python.md
@@ -75,4 +75,4 @@ You can test by using "anagrams={}" instead of "anagrams = collections.defaultdi
 
 ## Overall Review
 
-Easy one, but it's little bit complicated because of lack of proficiency in handling python dictionary. My own soltuion code is more than necessary compared to the given one. One more loop is needlessly writtened because I'd never noticed that just defining dic(without collections) can solve the KeyError. I must take more time to be proficient in handling dictionary.
+Easy one, but it's little bit complicated because of lack of proficiency in handling python dictionary. My own soltuion code is more than necessary compared to the given one. One more loop is needlessly writtened because I'd never noticed that defining dic(without collections library) caused the KeyError. I must take more time to be proficient in handling dictionary.
