--- a/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-14-Q1_python.md
+++ b/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-14-Q1_python.md
@@ -10,7 +10,7 @@ tags:
   - python
   - english
 
-excerpt: "Detect Palindrome with python"
+excerpt: "Detecting Palindrome with python"
 ---
 
 # Q1 Valid Palindrome
