--- a/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-15-Q2_python.md
+++ b/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-15-Q2_python.md
@@ -10,7 +10,7 @@ tags:
   - python
   - english
 
-excerpt: "Make the string reverse"
+excerpt: "Making the string reverse"
 ---
 
 # Q2 Reverse-String
