--- a/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-15-Q3_python.md
+++ b/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-15-Q3_python.md
@@ -10,7 +10,7 @@ tags:
   - python
   - english
 
-excerpt: "Reorder log files"
+excerpt: "Reordering log files"
 ---
 
 # Q3 Reorder-Data-in-log-Files
