tag, exerpt fixed

--- a/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-27-Q7_python.md
+++ b/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-27-Q7_python.md
@@ -8,9 +8,9 @@ tags:
   - code_review
   - python
   - english
-  - two-pointer
+  - optimizing
 
-excerpt: "Using two-pointer"
+excerpt: "Various Optimizing Method"
 ---
 
 # Q7 two-sum
