--- a/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-23-Q6_python.md
+++ b/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-23-Q6_python.md
@@ -58,7 +58,7 @@ class Solution:
             result = max(result,
                             expand(i, i+1), #abbc : even number two pointer
                             expand(i, i+2), #axyxc : odd number two pointer
-                            key=len #the criteria for checking max is length of string
+                            key=len #the criteria for checking which is max is length of the string
                             )
         return result
 
