--- a/_posts/Problem_Solving/Python_Algorithm_Book/2021-12-09-Q12_python.md
+++ b/_posts/Problem_Solving/Python_Algorithm_Book/2021-12-09-Q12_python.md
@@ -36,8 +36,8 @@ Output: 0
 Explanation: In this case, no transactions are done and the max profit = 0.
 
 ## Constraints
-- 1 <= prices.length <= 10^5
-- 0 <= prices[i] <= 10^4
+- 1 <= prices.length <= 10<sup>4</sup>
+- 0 <= prices[i] <= 10<sup>4</sup>
 
 ## 1. My "TRY" == Given "TRY"
 ```py
