--- a/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-14-Q1_python.md
+++ b/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-14-Q1_python.md
@@ -31,7 +31,7 @@ Output: false
 Explanation: "raceacar" is not a palindrome.
 
 ## Constraints
-- 1 <= s.length <= 2 * 105
+- 1 <= s.length <= 2 * 10<sup>5</sup>
 - s consists only of printable ASCII characters.
 
 ## Hints
