--- a/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-15-Q2_python.md
+++ b/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-15-Q2_python.md
@@ -29,7 +29,7 @@ Input: s = ["H","a","n","n","a","h"]
 Output: ["h","a","n","n","a","H"]
 
 ## Constraints
-- 1 <= s.length <= 105
+- 1 <= s.length <= 10<sup>5</sup>
 - s[i] is a printable ascii character.
 
 ## 1. My Solution
