--- a/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-29-Q8_python.md
+++ b/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-29-Q8_python.md
@@ -34,8 +34,8 @@ Output: 9
 
 ## Constraints
 - n == height.length
-- 1 <= n <= 2 * 104
-- 0 <= height[i] <= 105
+- 1 <= n <= 2 * 10<sup>4</sup>
+- 0 <= height[i] <= 10<sup>5</sup>
 
 ## 1. My Solution <- Given Solution #1
 ```py
