--- a/_posts/Problem_Solving/Python_Algorithm_Book/2021-12-04-Q9_python.md
+++ b/_posts/Problem_Solving/Python_Algorithm_Book/2021-12-04-Q9_python.md
@@ -34,7 +34,7 @@ Output: []
 
 ## Constraints
 - 0 <= nums.length <= 3000
-- -105 <= nums[i] <= 105
+- -10<sup>5</sup> <= nums[i] <= 10<sup>5</sup>
 
 ## 1. My Solution <- Given Solution #1
 ```py
