--- a/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-15-Q5_python.md
+++ b/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-15-Q5_python.md
@@ -32,7 +32,7 @@ Input: strs = ["a"]
 Output: [["a"]]
 
 ## Constraints
-- 1 <= strs.length <= 104
+- 1 <= strs.length <= 10<sup>4</sup>
 - 0 <= strs[i].length <= 100
 - strs[i] consists of lowercase English letters.
 
