--- a/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-27-Q7_python.md
+++ b/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-27-Q7_python.md
@@ -35,9 +35,9 @@ Input: nums = [3,3], target = 6
 Output: [0,1]  
 
 ## Constraints
-- 2 <= nums.length <= 10^4
-- -10^9 <= nums[i] <= 10^9
-- -10^9 <= target <= 10^9
+- 2 <= nums.length <= 10<sup>4</sup>
+- -10<sup>9</sup> <= nums[i] <= 10<sup>9</sup>
+- -10<sup>9</sup> <= target <= 10<sup>9</sup>
 - __Only one valid answer exists.__
 
 ## 1. My Solution == Given solution #1
