--- a/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-30-Q8+a_python.md
+++ b/_posts/Problem_Solving/Python_Algorithm_Book/2021-11-30-Q8+a_python.md
@@ -41,8 +41,8 @@ Output: 2
 
 ## Constraints
 - n == height.length
-- 2 <= n <= 105
-- 0 <= height[i] <= 104
+- 2 <= n <= 10<sup>5</sup>
+- 0 <= height[i] <= 10<sup>4</sup>
 
 ## 1. My Solution <- Referenced Solution
 ```py
