--- a/_posts/Problem_Solving/Python_Algorithm_Book/2021-12-14-Q14_python.md
+++ b/_posts/Problem_Solving/Python_Algorithm_Book/2021-12-14-Q14_python.md
@@ -156,4 +156,4 @@ recursion을 시작하는 코드이다. l1이 none이 아닐 때까지 실행된
 
 ## Overall Review
 
-Recursion itself is confusing + Linked list is complicating = Super Crazy hard to understand. If I didn't perfectly understand the question #13, maybe I give up this question. But I'm realizing my growth in algorithm skills because I wholly understand this answer in just an hour. As expected, struggling with some crazy problems makes me explosively stronger. Keep challenging!
+Recursion itself is confusing + Linked list is complicating = Super Crazy hard to understand. If I didn't perfectly understand the question #13, maybe I give up this question. But I'm realizing my growth in algorithm skills because I wholly understand this answer in just an hour. As expected, struggling with some crazy problems makes me explosively stronger. Keep challenging!!
