--- a/_posts/Problem_Solving/Python_Algorithm_Book/2021-12-20-Q20_python.md
+++ b/_posts/Problem_Solving/Python_Algorithm_Book/2021-12-20-Q20_python.md
@@ -75,8 +75,8 @@ First, bracket follows stack-structure, Last in First Out. Therefore last open-b
 1. Table consist of close-bracket(as a key) : open-bracket(as a value).
 2. Repeat each letter in the input string.
 3. Each loop, check input with if-statement.  
-3-1. `if~` : Check whether the letter is in the table keys(close-bracket). When open-bracket comes in, it is not in the keys surely so appended to the stack.  
-3-2. `elif~` : check if stack is empty or pair does not match. When close-bracket comes, this bracket passes `if` then comes to `elif`. Compare the item that pops from the stack with "table[close-bracket]", which returns the pair open-bracket. If not matches, immediately returns false.  
+3-1. `if~` : Check whether the letter is in the table keys(close-bracket). When open-bracket comes in, of course it is not in the keys, so it appended to the stack.  
+3-2. `elif~` : check if stack is empty or not, and pair matches or not. When close-bracket comes, this bracket passes `if` then comes to `elif`. Compare the item that pops from the stack with "table[close-bracket]", which returns the pair open-bracket. If not matches, immediately returns false.  
 3-3. `not stack` filters the case when close-bracket comes first. When close-bracket comes, this passes `if` (since it is in the keys). So stack doesn't have any element. This fulfills `elif`, so return false.
 
 ## Overall Review
