--- a/_posts/Problem_Solving/Python_Algorithm_Book/2021-12-20-Q20_python.md
+++ b/_posts/Problem_Solving/Python_Algorithm_Book/2021-12-20-Q20_python.md
@@ -39,7 +39,7 @@ Output: false
 - 1 <= s.length <= 10<sup>4</sup>
 - s consists of parentheses only `'()[]{}'`.
 
-## 1. My own Solution <- Given Solution
+## 1. My Solution <- Given Solution
 
 ```py
 class Solution:
@@ -69,8 +69,7 @@ else:
     print("False")
 ```
 
-We have to remind the conditions that bracket become valid.  
-First, bracket follows stack-structure, Last in First Out. Therefore last open-bracket have to be closed at first. We can make this with the stack.
+We have to remind the conditions that bracket become valid. Bracket follows stack-structure, Last in First Out. Therefore last open-bracket have to be closed at first. We can make this with the stack.
 
 1. Table consist of close-bracket(as a key) : open-bracket(as a value).
 2. Repeat each letter in the input string.
