--- a/_posts/ETC/plan/2022-03-03-study_plan2.md
+++ b/_posts/ETC/plan/2022-03-03-study_plan2.md
@@ -63,6 +63,22 @@ ___
 
 ### 1. 웹 스크래핑
 
-웹에서 데이터 가져오는건 빅데이터 생성-운용 과정에 있어서 필수일 것 같아서 일단 배워보련다. http request 방식으로 스크래핑 해오는건 당장도 할 수 있을 것 같은데 요
+웹에서 데이터 가져오는건 빅데이터 생성-운용 과정에 있어서 필수일 것 같아서 일단 배워보련다. http request 방식으로 스크래핑 해오는건 당장도 할 수 있을 것 같은데 요즘 로그인 안하는 곳이 없기 때문에 1도 의미가 없다. 결국 셀레니움 써야지 뭐... 나중에 속도 문제로 인해 selenium-request 복합해서 써볼 계획이긴 한데 일단 집컴 로컬에서 성공부터 시키고 시도해볼 계획이다.
+
+### 2. 리액트
+
+웹 프레임워크 하나쯤은 다룰 줄 알아야 어디가서 웹 좀 친다고 말할 수 있을 것 같다. 파이썬이 좀 더 친숙해서 django 쓸까 고민중이긴 한데... 고민 좀 해봐야겠다.  
+
+### 3. 자바스크립트
+
+누누히 말하지만 크롬으로 유일하게 빠꾸없이 잘 실행할 수 있는게 자바스크립트이기 때문에 이걸 좀 잘 파서 당직파일 자동으로 짜주고 이런거 web-automation 시켜보려 한다. 원래 엑셀로다가 해보려고 했는데 국방부가 엑셀이 있을리가 없지 ㅋㅋ 한셀같은 찐따 프로그램 써갖고 표준 VBA가 아닌 VBS라는 듣보잡 언어 쓴다. 검색해도 1도 안나오는거 보고 바로 포기했다. 자바스크립트로 그냥 매크로 만드련다....
+
+
+## 총평
+
+저번 계획 그래서 지켰냐?  
+
+ㄴㄴ 하나도 안지켰다. 사실 사람이 어떻게 목표한대로만 공부를 하겠는가. 이것도 들쑤시고 저것도 들쑤시면서 좀 와이드하게 학습하는거지. 위에 그동안 뭐했는지 보면 생각보다 다채롭게 많이 배운 것 같지 않아 보이는가? 은근 많이 한 것처럼 보이는데 사실 최근에 좀 많이 놀아서 별로 한 거 없는거 맞다. 다시 열심히 공부 시작해야지...
+
 
 
