--- a/_posts/ETC/Daily_Record/blog_developing_diary/2021-09-05-1st.md
+++ b/_posts/ETC/Daily_Record/blog_developing_diary/2021-09-05-1st.md
@@ -6,10 +6,10 @@ categories:
   - Daily_Record
 tags:
   - blog
-  - develop
+  - develop_diary
 
 toc : true
-excerpt : "아이콘 추가, page to top 버튼 등"
+excerpt : "icon added, page to top button etc..."
 --- 
 <!-- basic info -->
 
