--- a/_posts/ETC/Daily_Record/blog_developing_diary/2021-09-25-2nd.md
+++ b/_posts/ETC/Daily_Record/blog_developing_diary/2021-09-25-2nd.md
@@ -1,15 +1,14 @@
 ---
 title:  "블로그 개발 일지[2]"
 search: false
-excerpt: "게시글 추가 및 서브 블로그 창설"
 categories: 
   - Daily_Record
 tags:
   - blog
-  - develop
+  - develop_diary
 toc : true
 
-excerpt : "카테고리 재분류, 게시글 업로드"
+excerpt : "categories renewal, new posts"
 --- 
 <!-- basic info -->
 
