--- a/_posts/ETC/Daily_Record/blog_developing_diary/2021-10-03-3rd.md
+++ b/_posts/ETC/Daily_Record/blog_developing_diary/2021-10-03-3rd.md
@@ -1,15 +1,14 @@
 ---
 title:  "블로그 개발 일지[3]"
 search: false
-excerpt: "좌측 sidebar 추가"
 categories: 
   - Daily_Record
 tags:
   - blog
-  - develop
+  - develop_diary
 toc : true
 
-excerpt : "SideBar Added"
+excerpt : "left SideBar added"
 --- 
 <!-- basic info -->
 
