--- a/_posts/ETC/Daily_Record/blog_developing_diary/2021-12-06-5th.md
+++ b/_posts/ETC/Daily_Record/blog_developing_diary/2021-12-06-5th.md
@@ -5,7 +5,7 @@ categories:
   - Daily_Record
 tags:
   - blog
-  - develop
+  - develop_diary
 
 excerpt : "Codeblock LineNumber, sidebar fixed"
 --- 
