--- a/_posts/ETC/Daily_Record/flutter_developing_diary/2022.12.17-#2.md
+++ b/_posts/ETC/Daily_Record/flutter_developing_diary/2022.12.17-#2.md
@@ -1,7 +1,7 @@
 ---
-title:  "Flutter 개발일지 day 1"
+title:  "Flutter 개발일지 day 2"
 search: false
-excerpt: "계획 세우기"
+excerpt: "기본 레이아웃 구성"
 categories: 
   - Daily_Record
 tags:
