--- a/_posts/ETC/Daily_Record/flutter_developing_diary/2022-12-25-#10.md
+++ b/_posts/ETC/Daily_Record/flutter_developing_diary/2022-12-25-#10.md
@@ -49,7 +49,7 @@ await Hive.openBox<List<ScheduleClass>>('lib');
 
 위에서 생성한 `ScheduleClassAdapter`를 여기서 실행한다.
 
-### 3. monthCal.dart 수정
+### 3. monthCal.dart 수정 (일정 추가 버튼 구현)
 
 ```dart
 // Scaffold의 body 부분
@@ -72,8 +72,6 @@ body : ValueListenableBuilder(
               box.get("2022.12.25")!.add(ScheduleClass(name: "t$i", date: DateTime.now()));
             i++;
             print(box.get("2022.12.25"));
-            // for(int i = 0; i<box.length ; i++)
-            //   print(box.get(i)!.name);
           },
         ),
       ]
